--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
         <script src="vendor/angular-route/angular-route.min.js"></script>
 
         <script src="js/services/todoService.js"></script>
+        <script src="js/services/annuaireService.js"></script>
 
         <script src="js/controllers/mainController.js"></script>
+        <script src="js/controllers/annuaireController.js"></script>
 
         <script src="js/routes.js"></script>
 
